--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0 auto;
     padding: 0 auto;
     max-width: 1440px;
+    
+    width: 100%;
 }
 
 
@@ -13,7 +15,8 @@ body {
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 .container {
-height: 80%;
+    
+    margin: 0 auto;
 
 }
 
@@ -27,8 +30,9 @@ header h1 {
     line-height: normal;
     letter-spacing: -1.62px;
     font-family: 'PT Serif', serif;
-
-    margin-right: 215px;
+    margin-left: 50px;
+    margin-right: 315px;
+    margin-top: 100px;
 
    
     }
@@ -40,7 +44,7 @@ header h1 {
     }
     header p {
         font-family: 'Poppins'!important; 
-        margin-left: 460px;
+        margin-left: 560px;
         display: flex;
         width: 439px;
         height: 87px;
@@ -104,4 +108,84 @@ header h1 {
 
 footer{
     text-align: center;
+}
+
+
+@media screen and (max-width: 920px) {
+
+    header h1 {
+    display: block;
+    height: auto;
+    margin: 0px;
+    margin-top: 50px;
+    margin-left: 60px;
+    
+       
+        }
+        header h3 {
+            font-family: 'Poppins', sans-serif;
+            text-transform: uppercase;
+            display: block;
+            margin-left: 130px;
+        }
+        header p {
+            font-family: 'Poppins'!important; 
+            display: inline-block;    
+            margin: 0px;
+            margin-left: 60px;
+            height:fit-content;
+            width: fit-content;
+     
+            
+        }
+        .img {
+            display: block;
+            margin: 56.64px;
+        }
+            .img img {
+                
+                width: 300px;
+                height: 426.496px;
+                flex-shrink: 0;
+                background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+                
+            }
+            .img p {
+                font-family: 'Poppins';
+                font-weight: bold;  
+            }
+            .a p {
+                font-family: 'Poppins';
+                font-weight: bold;  
+            }
+        
+            .a {
+               
+                display: block;
+                margin: 56.64px;
+                padding-top: 100px;
+          
+            } 
+            .a img {
+             
+                width: 300px;
+                height: 426.496px;
+                flex-shrink: 0;
+                background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+            }
+
+            
+.right-text {
+    margin: 0 auto;
+    display: block;
+    position: absolute;
+    rotate: 0deg;
+    font-family: 'PT Serif', serif;
+    margin-top:50px;
+    margin-left: 0px;
+    padding-left: 0;
+}
+        
+
+
 }
